Implement CORS so front end can access backend

--- a/frontend/examples/aws.html
+++ b/frontend/examples/aws.html
@@ -30,7 +30,7 @@
     $(function(){
 
 
-        Papa.parse("../data/iris.csv", {
+        Papa.parse("http://localhost:5000/fertilizer_use", {
             download: true,
             complete: function(parsed){
 
