adding pivot ui update

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,9 +12,9 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
 
     <!-- PivotTable.js libs from ../dist -->
-    <link rel="stylesheet" type="text/css" href="../dist/pivot.css">
-    <script type="text/javascript" src="../dist/pivot.js"></script>
-    <script type="text/javascript" src="../dist/c3_renderers.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/pivot.css">
+    <script type="text/javascript" src="dist/pivot.js"></script>
+    <script type="text/javascript" src="dist/c3_renderers.js"></script>
     <style>
         body {font-family: Verdana;}
     </style>
