--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
     $(function(){
 
 
-        Papa.parse("data/iris.csv", {
+        Papa.parse("http://localhost:5000/fertilizer_use", {
             download: true,
             complete: function(parsed){
         
