--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,6 +27,10 @@
 </head>
 <body>
 <i class="fa fa-spinner fa-spin" aria-hidden="true" id="loading-spinner" style="font-size:50px;"></i>
+<select>
+    <option value="fertilizer_use">Fertilizer Use</option>
+    <option value="nutrion_landscape">Nutitrion Landscape Relationships</option>
+</select>
 <script type="text/javascript">
     // This example is the most basic usage of pivotUI()
 
