Point our ajax request at our real frontend ELB

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
     $(function(){
 
 
-        Papa.parse("http://localhost:5000/fertilizer_use", {
+        Papa.parse("http://applicationelasticlb-208988572.us-east-1.elb.amazonaws.com/fertilizer_use", {
             download: true,
             complete: function(parsed){
         
