--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.min.js"></script>
 
     <!-- PivotTable.js libs from ../dist -->
+    <script src="/dist/pace.min.js"></script>
+    <link href="/dist/pace.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="dist/pivot.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
@@ -46,7 +48,8 @@
         </select>
     </div>
     <div id="output" style="margin: 30px;">
-        <i class="fa fa-spinner fa-spin" aria-hidden="true" id="loading-spinner" style="font-size:50px;"></i>
+        <!--Using Pace instead-->
+        <!--<i class="fa fa-spinner fa-spin" aria-hidden="true" id="loading-spinner" style="font-size:50px;"></i>-->        
     </div>
 </div>
  <script type="text/javascript">
